--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,7 +1,7 @@
 <div class="container-fluid fh5co_footer_bg pb-3">
     <div class="container">
         <div class="row">
-            <div class="col-12 spdp_right py-5"><img src="images/white_logo.png" alt="img" class="footer_logo"/></div>
+            <div class="col-12 spdp_right py-5"><img src="images/others/white_logo.png" alt="img" class="footer_logo"/></div>
             <div class="clearfix"></div>
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="footer_main_title py-3"> About</div>
@@ -45,7 +45,7 @@
                 <a href="#" class="footer_post pb-4"> Success is not a good teacher failure makes you humble </a>
                 <div class="footer_makes_sub_font"> Dec 31, 2016</div>
                 <a href="#" class="footer_post pb-4"> Success is not a good teacher failure makes you humble </a>
-                <div class="footer_position_absolute"><img src="images/footer_sub_tipik.png" alt="img" class="width_footer_sub_img"/></div>
+                <div class="footer_position_absolute"><img src="images/others/footer_sub_tipik.png" alt="img" class="width_footer_sub_img"/></div>
             </div>
         </div>
         <div class="row justify-content-center pt-2 pb-4">
