--- a/includes/article_header.html
+++ b/includes/article_header.html
@@ -34,6 +34,10 @@
                         <a class="nav-link" href="../../../../index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
+                        <a class="nav-link" href="../../../../blog.html">Blog <span class="sr-only">(current)</span></a>
+                    </li>
+
+                    <li class="nav-item ">
                         <a class="nav-link" href="../../../../Contact_us.html">Contact <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
