--- a/includes/footer.html
+++ b/includes/footer.html
@@ -3,6 +3,47 @@
         <div class="row">
             <div class="col-12 spdp_right py-5"><img src="images/others/white_logo.png" alt="img" class="footer_logo"/></div>
             <div class="clearfix"></div>
+            <div class="col-12 col-md-4 col-lg-5">
+                <div class="footer_main_title py-3"> About</div>
+                <div class="footer_sub_about pb-3">
+                    Nous vous offrons la possibilité de documenter et d'en savoir plus sur différents domaines. Bonne
+                    navigation sur le site!
+                </div>
+                <div class="footer_mediya_icon">
+                    <div class="text-center d-inline-block"><a class="fh5co_display_table_footer">
+                        <div class="fh5co_verticle_middle"><i class="fa fa-linkedin"></i></div>
+                    </a></div>
+                    <div class="text-center d-inline-block"><a class="fh5co_display_table_footer">
+                        <div class="fh5co_verticle_middle"><i class="fa fa-google-plus"></i></div>
+                    </a></div>
+                    <div class="text-center d-inline-block"><a class="fh5co_display_table_footer">
+                        <div class="fh5co_verticle_middle"><i class="fa fa-twitter"></i></div>
+                    </a></div>
+                    <div class="text-center d-inline-block"><a class="fh5co_display_table_footer">
+                        <div class="fh5co_verticle_middle"><i class="fa fa-facebook"></i></div>
+                    </a></div>
+                </div>
+            </div>
+            <div class="col-12 col-md-5 col-lg-5 position_footer_relative">
+                <div class="footer_main_title py-3"> Most Viewed Posts</div>
+                <div class="footer_makes_sub_font"> Avril 14, 2020</div>
+                <a href="articles/metier_informatique/pourquoi_devenir_dev_web/fr/index.html" class="footer_post pb-4"> Pourquoi devenir developpeur Web? </a>
+                <div class="footer_makes_sub_font"> 8 Mai, 2020</div>
+                <a href="articles/it/pourquoi_apprendre_python/fr/index.html" class="footer_post pb-4"> Pourquoi apprendre le langage Python ? </a>
+                <div class="footer_makes_sub_font"> Dec 31, 2019</div>
+                <a href="articles/Marketing/pourquoi_apprendre_digital_marqueting/fr/index.html" class="footer_post pb-4"> C'est quoi le marketing digital ? </a>
+                <div class="footer_position_absolute"><img src="images/others/footer_sub_tipik.png" alt="img" class="width_footer_sub_img"></div>
+            </div>
+        </div>
+        <br><br><br>
+        <div class="row justify-content-center pt-2 pb-4">
+            <div class="col-12 col-md-8 col-lg-7 ">
+                <div class="input-group">
+                    <span class="input-group-addon fh5co_footer_text_box" id="basic-addon1"><i class="fa fa-envelope"></i></span>
+                    <input type="text" class="form-control fh5co_footer_text_box" placeholder="Enter your email..." aria-describedby="basic-addon1">
+                    <a href="#" class="input-group-addon fh5co_footer_subcribe" id="basic-addon12"> <i class="fa fa-paper-plane-o"></i>&nbsp;&nbsp;Subscribe</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
